...
            }, label: {
                HStack(spacing: 10) {
                    Image(systemName: "rectangle.righthalf.inset.filled.arrow.right")
                        .font(.title2)
                        .frame(width: 30)
                    
                    Text("Sign-out")
                        .fontWeight(.semibold)
                }
                .foregroundColor(.white)
                .padding(.vertical, 12)
                .padding(.horizontal, 20)
            })
...
